# SpotiFetch

./: .gitignore  LICENSE  README.md  pyproject.toml
SpotiFetch/: cli.py  fetch.py  helpers.py
spotifetch/: cli.py  colors.py  fetch.py  helpers.py
