[tool.poetry]
name = "SpotiFetch"
version = "0.2.0"
description = "A fetch tool for Spotify"
authors = ["ZenithDS"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "^2.19.0"
rich = "^11.2.0"
typer = "^0.4.0"
appdirs = "^1.4.4"
"colorgram.py" = "^1.2.0"
requests = "^2.27.1"

[tool.poetry.scripts]
spotifetch = "spotifetch.cli:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
