[tool.poetry]
name = "SpotiFetch"
version = "0.4.3"
description = "A fetch tool for Spotify"
authors = ["dotzenith"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "^2.19.0"
typer = "^0.4.0"
appdirs = "^1.4.4"
"colorgram.py" = "^1.2.0"
requests = "^2.27.1"
kolorz = "^0.2.1"

[tool.poetry.scripts]
spotifetch = "spotifetch.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
